@@ -1,3 +1,73 @@
-video presentation: https://youtu.be/s_bsMrSidFo?si=nGhqTmhF5jwHoZQK
+# CROISSANT BOOM 🎯
 
-project with @ditdyiy @Jibtea @puz91
+## 🎬 Video Presentation
+Watch our project presentation here: [CROISSANT BOOM Video](https://youtu.be/s_bsMrSidFo?si=nGhqTmhF5jwHoZQK)
+
+## 🚀 Project Overview
+**CROISSANT BOOM** is an engaging game designed to enhance focus and patience. Players must bake croissants for the correct amount of time — without underbaking or burning them — while avoiding tomato bombs to score as many points as possible.
+
+## 👥 Contributors
+This project was collaboratively developed by:
+- **Sinsuda Rakporpiang** (@sinsudaR)
+- **Ratima Klabprasit** (@ditdyiy)
+- **Jiratchaya Kunyaphila** (@Jibtea)
+- **Puckanut Laoarpasuwong** (@puz91)
+
+## 📚 Game Rules
+1. **Bake Croissants:** Players place croissants in the oven and bake them for a set time.
+2. **Baking Times & Scores:**
+   - Regular Croissant: 5 seconds (100 points)
+   - Salad Croissant: 6 seconds (120 points)
+   - Rainbow Croissant: 8 seconds (250 points)
+3. **Penalties:**
+   - Undercooked croissants: -100 points
+   - Burned croissants: -150 points
+4. **Tomato Bombs:** Croissants that touch a bomb burn instantly.
+5. **All actions (baking, discarding, serving) must be done within specific areas.**
+
+## 🎮 Game Modes
+- **Easy Mode:** 2 tomato bombs on the board
+- **Hard Mode:** 5 tomato bombs on the board
+
+## 🎯 Controls
+- **W, A, S, D:** Move the croissant
+- **E:** Place croissant in the oven
+- **Q:** Remove croissant from the oven
+- **F:** Discard a croissant
+- **R:** Serve a croissant
+
+## 🏁 Game Objectives
+- Bake croissants perfectly to earn points
+- Avoid tomato bombs
+- The game ends when the time limit of **1 minute and 30 seconds** is reached
+
+## 🏆 Scoring
+- Higher points for baking croissants longer (based on their type)
+- Deduction for undercooked or burned croissants
+
+## 🧑‍💻 Technologies Used
+- **JavaFX:** For UI and game logic
+- **Java:** Core programming language
+- **Audio & Graphics:** Used for immersive game elements
+
+## 📦 Installation
+Follow these steps to run the game locally:
+
+```bash
+# Clone the repository
+git clone [<repository_url>](https://github.com/adusnis/Croissant-Boom-)
+
+# Navigate to the project directory
+cd croissant-boom
+
+# Run the project
+java -jar --module-path "C:\Program Files\openjfx-23.0.2_windows-x64_bin-sdk\javafx-sdk-23.0.2\lib" --add-modules javafx.controls,javafx.fxml,javafx.media croissant.jar
+```
+
+## 📬 Contact
+For questions or feedback, feel free to reach out to any of the contributors listed above!
+
+---
+
+We hope you enjoy playing **CROISSANT BOOM** as much as we enjoyed building it! 🥐💥
+
